--- a/VacationTracker/project.properties
+++ b/VacationTracker/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=../../Downloads/johannilsson-android-actionbar-1a98f28/johannilsson-android-actionbar-1a98f28/actionbar
+android.library.reference.1=../../../Downloads/johannilsson-android-actionbar-1a98f28/johannilsson-android-actionbar-1a98f28/actionbar
