--- a/VacationTracker/AndroidManifest.xml
+++ b/VacationTracker/AndroidManifest.xml
@@ -4,12 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="11"
+              android:targetSdkVersion="14" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
             android:name=".VacationTrackerActivity" 
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@android:style/Theme.Holo.NoActionBar"
             android:name=".SettingsActivity" >
         </activity>
     </application>
