--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,5 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=../../../vpindicator
+android.library.reference.1=..\\..\\..\\vpindicator
+android.library.reference.2=../../../Downloads/ActionBarSherlock/JakeWharton-ActionBarSherlock-436230d/library
