--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jbalboni.vacation"
-    android:versionCode="6"
-    android:versionName="1.1.3" >
+    android:versionCode="8"
+    android:versionName="1.2" >
 
     <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="13" />
@@ -28,10 +28,18 @@
             android:name=".LeaveHistoryActivity" 
             android:theme="@style/VacationTheme">
         </activity>
+        <activity
+            android:name=".LeaveCategoryActivity" 
+            android:theme="@style/VacationTheme">
+        </activity>
         <provider
     		android:authorities="com.jbalboni.vacation.data.LeaveHistoryProvider"
     		android:multiprocess="true"
     		android:name="com.jbalboni.vacation.data.LeaveHistoryProvider"></provider>
+    	<provider
+    		android:authorities="com.jbalboni.vacation.data.LeaveCategoryProvider"
+    		android:multiprocess="true"
+    		android:name="com.jbalboni.vacation.data.LeaveCategoryProvider"></provider>
     </application>
 
 </manifest>
