New versions of abs and vpi, history nav progress

--- a/project.properties
+++ b/project.properties
@@ -9,5 +9,5 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=..\\\\..\\\\..\\\\vpindicator
-android.library.reference.2=../../../Downloads/ActionBarSherlock/JakeWharton-ActionBarSherlock-436230d/library
+android.library.reference.1=..\\..\\..\\Downloads\\JakeWharton-ActionBarSherlock-4.1.0-0-g9598f2b\\JakeWharton-ActionBarSherlock-88fc341\\library
+android.library.reference.2=../../../Downloads/JakeWharton-Android-ViewPagerIndicator-2.3.1-0-g0439759/JakeWharton-Android-ViewPagerIndicator-0439759/library
