--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jbalboni.vacation"
-    android:versionCode="8"
+    android:versionCode="9"
     android:versionName="1.2" >
 
     <uses-sdk android:minSdkVersion="7"
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name=".ui.LeaveHistoryActivity" 
-            android:theme="@style/VacationTheme">
+            android:theme="@style/Theme.Sherlock.Light.ForceOverflow">
         </activity>
         <activity
             android:name=".ui.LeaveCategoryActivity" 
