--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jbalboni.vacation"
-    android:versionCode="10"
-    android:versionName="1.3" >
+    android:versionCode="11"
+    android:versionName="1.4" >
 
     <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="13" />
@@ -30,6 +30,10 @@
         </activity>
         <activity
             android:name=".ui.LeaveCategoryActivity" 
+            android:theme="@style/VacationTheme">
+        </activity>
+        <activity
+            android:name=".calendar.CalendarViewActivity" 
             android:theme="@style/VacationTheme">
         </activity>
         <activity
