--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.3.2" >
 
     <uses-sdk android:minSdkVersion="7"
-              android:targetSdkVersion="13" />
+              android:targetSdkVersion="14" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -51,6 +51,13 @@
     		android:multiprocess="true"
     		android:name="com.jbalboni.vacation.data.LeaveCategoryProvider"
     		android:exported="false"></provider>
+    	<receiver android:name=".widget.LeaveWidgetProvider" >
+    		<intent-filter>
+        		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    		</intent-filter>
+    		<meta-data android:name="android.appwidget.provider"
+               android:resource="@xml/widget" />
+		</receiver>
     </application>
 
 </manifest>
