--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jbalboni.vacation"
     android:versionCode="12"
-    android:versionName="1.3.2" >
+    android:versionName="1.3.3"
+    android:installLocation="auto" >
 
     <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="13" />
