--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jbalboni.vacation"
-    android:versionCode="13"
-    android:versionName="1.3.3"
+    android:versionCode="15"
+    android:versionName="1.3.4"
     android:installLocation="auto" >
 
-    <uses-sdk android:minSdkVersion="7"
+    <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="13" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:backupAgent="LeaveTrackerBackupAgent" >
         <activity
             android:label="@string/app_name"
             android:name=".ui.LeaveTrackerActivity" 
@@ -52,6 +53,7 @@
     		android:multiprocess="true"
     		android:name="com.jbalboni.vacation.data.LeaveCategoryProvider"
     		android:exported="false"></provider>
+    	<meta-data android:name="com.google.android.backup.api_key" android:value="" />
     </application>
 
 </manifest>
