--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.0.jar" sourcepath="C:/Users/jbalboni/.m2/repository/joda-time/joda-time/2.0/joda-time-2.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/opencsv-2.3.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
